--- a/texto/texto.html
+++ b/texto/texto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+     <!--<link rel="stylesheet" href="estilos.css">-->
     
      <!--<style>
         h1{
@@ -71,10 +71,12 @@
     <title>Document</title>
 </head>
 
-<p class="p2">parrafo1</p>
-<p class="p1">parrafo2</p>
-<p class="mayusculas">Parrafo mayusculas</p>
-<form actiom="procesar.php" method="get">
+
+<body>
+    <p class="p2">parrafo1</p>
+    <p class="p1">parrafo2</p>
+    <p class="mayusculas">Parrafo mayusculas</p>
+    <form actiom="procesar.php" method="get">
     <fieldset>
         <legend>Datos personales</legend>
             <label><input type="text" name="nombre" id="nombre"></label>
@@ -85,7 +87,6 @@
     <p>Platón: <q class="cr71"> <span class="cr7">"Solo sé que no se nada"</span></q></p>
     <p>Platón: <q> just know that I don't know anything</q></p>
     <a href="https://www.mclibre.org/consultar/htmlcss/" target="_blank">Apuntes</a>
-<body>
    
    <h1>
         <pre>
@@ -111,7 +112,7 @@
 
 
     <mark><small><strong>Pablo Neruda</strong></small></mark>
-
+   
 </body>
 
 </html>
